--- a/css/main.css
+++ b/css/main.css
@@ -10675,7 +10675,7 @@ a:hover, a:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #fffe55;
+  background-color: #FDB714;
   border-radius: 50%;
   opacity: 0.6;
   -webkit-animation: bounce 2s infinite ease-in-out;
