--- a/css/main.css
+++ b/css/main.css
@@ -176,6 +176,89 @@ body {
   -webkit-locale: auto;
 }
 
+.services {
+	display: flex;
+	flex-wrap: wrap; }
+
+.services-list {
+	list-style: none;
+	position: relative;
+	width: 100%; }
+	@media only screen and (min-width: 1025px) {
+		.services-list {
+			flex: 0 0 50%;
+			max-width: 50%;
+			padding-right: 40px; } }
+	@media only screen and (max-width: 1024px) {
+		.services-list {
+			margin-bottom: 56px; } }
+	.services-list__item {
+		position: relative;
+		font-family: "aktiv-grotesk-extended", "Montserrat", sans-serif;
+		font-weight: 700;
+		color: #b5b5b5;
+		cursor: pointer;
+		letter-spacing: -0.05em;
+		transition: all 0.4s cubic-bezier(0.25, 0.74, 0.22, 0.99);
+		font-size: 34px;
+		font-size: 2.125rem; }
+		@media (prefers-reduced-motion: reduce) {
+			.services-list__item {
+				transition: none; } }
+		@media only screen and (min-width: 1025px) {
+			.services-list__item {
+				font-size: 56px;
+				font-size: 3.5rem; } }
+		.services-list__item:hover, .services-list__item--is-active {
+			color: #000000; }
+			.services-list__item:hover span::after, .services-list__item--is-active span::after {
+				width: 100%; }
+	.services-list__label {
+		position: relative;
+		z-index: 1; }
+		.services-list__label::after {
+			content: '';
+			z-index: -1;
+			position: absolute;
+			display: block;
+			bottom: 10px;
+			height: 16px;
+			width: 0;
+			background-color: #ffc62d;
+			transition: all 0.4s cubic-bezier(0.25, 0.74, 0.22, 0.99); }
+			@media only screen and (min-width: 1025px) {
+				.services-list__label::after {
+					bottom: 20px; } }
+
+.services-content {
+	list-style: none;
+	position: relative;
+	width: 100%; }
+	@media only screen and (min-width: 1025px) {
+		.services-content {
+			flex: 0 0 50%;
+			max-width: 50%; } }
+	.services-content__item {
+		font-size: 28px;
+		font-size: 1.75rem;
+		margin-bottom: 48px;
+		line-height: 1.3;
+		color: #b5b5b5;
+		transition: all 0.4s cubic-bezier(0.25, 0.74, 0.22, 0.99); }
+		@media (prefers-reduced-motion: reduce) {
+			.services-content__item {
+				transition: none; } }
+		.services-content__item:last-child {
+			margin-bottom: 0; }
+		@media only screen and (min-width: 1025px) {
+			.services-content__item {
+				font-size: 40px;
+				font-size: 2.5rem; } }
+		.services-content__item--is-active {
+			color: #000000; }
+
+
+
 body.no-grow main {
   -webkit-box-flex: unset;
       -ms-flex-positive: unset;
@@ -781,11 +864,11 @@ a:hover, a:focus {
 }
 
 .arrow-link--white .arrow-link__text {
-  color: #ffffff;
+  color: #000000;
 }
 
 .arrow-link--white .arrow-link__icon svg {
-  fill: #ffffff;
+  fill: #000000;
 }
 
 .play-btn {
@@ -3821,7 +3904,7 @@ a:hover, a:focus {
 
 /* 2.29 Accordion */
 .accordion__item {
-  border-top: solid 1px #ffffff;
+  border-top: solid 1px #000000;
 }
 
 .accordion__item-header {
@@ -3863,7 +3946,7 @@ a:hover, a:focus {
   font-size: 26px;
   font-weight: 500;
   line-height: 1.5;
-  color: #ffffff;
+  color: #000000;
 }
 
 @media (min-width: 768px) {
@@ -3876,7 +3959,7 @@ a:hover, a:focus {
   max-width: 560px;
   font-size: 15px;
   line-height: 1.5;
-  color: #ffffff;
+  color: #000000;
 }
 
 @media (min-width: 1200px) {
@@ -3890,7 +3973,7 @@ a:hover, a:focus {
   margin-top: 24px;
   font-size: 15px;
   line-height: 1.5;
-  color: #ffffff;
+  color: #000000;
 }
 
 @media (min-width: 1200px) {
@@ -5039,7 +5122,7 @@ color: #FDB714;
 /* 3.15 Services section in homepage */
 .our-services {
   padding-bottom: 80px;
-  background-color: #000000;
+  background-color: #FDB714;
 }
 
 @media (min-width: 1200px) {
@@ -5105,7 +5188,7 @@ color: #FDB714;
   font-size: 52px;
   font-weight: 500;
   line-height: 1;
-  color: #ffffff;
+  color: #000000;
 }
 
 @media (min-width: 768px) {
@@ -5124,7 +5207,7 @@ color: #FDB714;
   margin-bottom: 24px;
   font-size: 15px;
   line-height: 1.5;
-  color: #ffffff;
+  color: #000000;
 }
 
 @media (min-width: 768px) {
@@ -5141,7 +5224,7 @@ color: #FDB714;
     margin-left: auto;
     font-size: 32px;
     line-height: 1.3125;
-    color: #ffffff;
+    color: #000000;
   }
 }
 
@@ -5211,7 +5294,7 @@ color: #FDB714;
 
 .works__title span {
   display: block;
-  color: #ffffff;
+  color: #000000;
 }
 
 .works__more {
@@ -5514,7 +5597,7 @@ color: #FDB714;
 }
 
 .about-video-section--pb-0 {
-  padding-bottom: 0;
+  padding-bottom: 34px;
 }
 
 @media (min-width: 768px) {
